--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
   <section class="section" id="about">
     <h2>About Us</h2>
-    <div style="width: 1000px; margin-left: auto;">
+    <div style="width: auto; margin-left: auto;">
      গুনগুন ফুডস লিমিটেড একটি স্বাস্থ্যসম্মত এবং লোভনীয় স্বাদের বিভিন্ন আইটেমের হোমমেড ফুড এবং  আচার প্রস্তুতকারী এবং বাজারজাতকারী প্রতিষ্ঠান। প্রতিষ্ঠানটির কর্ণধার জেনিফার মাহমুদ ঋতু আচারের জগতে একজন সুপরিচিত মানুষ, তিনি ৯ বছর ধরে ভিন্ন ভিন্ন স্বাদের আচার তৈরী করে সবাইকে টক ঝাল মিস্টির দুনিয়ায় হারিয়েছেন এবং পেয়েছেন তিনটি সেরা আচারের পুরস্কার। আমরা আশা রাখি, জেনিফার মাহমুদের হাতের জাদুতে আপনাদের সাথে নিয়ে গুনগুন ফুডস লিমিটেড এগিয়ে যাবে অনেকদূর।
     </div>
   </section>
