--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     font-size: 18px;
     line-height: 1.6;
     color: #fff;
-    background: #ffcccb;
+    background: #ff9900;
     border-radius: 12px;
     box-shadow: 0 4px 14px rgb(0 0 0 / 0.1);
     overflow-wrap: break-word;
