--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
     }
 
-  /* === Sliding Banner Styles === */
+/* === Sliding Banner Styles === */
 .slider {
   position: relative;
   width: 100%;
@@ -148,27 +148,31 @@
 .slides {
   display: flex;
   width: 400%;
-  animation: slide 8s infinite;
+  animation: slide 12s infinite;
 }
 
 .slides img {
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: 100%;
   width: 100%;
-  height: auto;           /* উচ্চতা স্বয়ংক্রিয় */
-  object-fit: cover;      /* চাইলে object-fit তোমার পছন্দ অনুযায়ী */
+  height: auto;
+  object-fit: cover;
 }
 
+/* Animations */
 @keyframes slide {
-  0%   { margin-left: 0%; }
-  25%  { margin-left: 0%; }
-  30% { margin-left: -100%; }
-  55% { margin-left: -100%; }
-  60% { margin-left: -200%; }
-  85% { margin-left: -200%; }
-  90% { margin-left: -300%; }
-  100%{ margin-left: -300%; }
+  0%   { transform: translateX(0%); }
+  25%  { transform: translateX(0%); }
+  30% { transform: translateX(-100%); }
+  55% { transform: translateX(-100%); }
+  60% { transform: translateX(-200%); }
+  85% { transform: translateX(-200%); }
+  90% { transform: translateX(-300%); }
+  100%{ transform: translateX(-300%); }
 }
 
-/* মোবাইলে আরও ভালো দেখার জন্য */
+/* Responsive Styles */
 @media (max-width: 767px) {
   .slider {
     height: auto;
@@ -179,7 +183,6 @@
     object-fit: cover;
   }
 }
-
   </style>
 </head>
 <body>
